--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 title: Osei D. Agyei
-#logo:
-#description:
-#show_downloads:true
+logo:
+description:
+show_downloads:true
 theme:jekyll-theme-minimal
